[gd_scene load_steps=4 format=3 uid="uid://dpyivff23vrii"]

[ext_resource type="Script" path="res://SettingsPanel.gd" id="1_28uus"]

[sub_resource type="ImageTexture" id="ImageTexture_o0wrb"]

[sub_resource type="ImageTexture" id="ImageTexture_femu3"]

[node name="SettingsPanel" type="PanelContainer"]
size_flags_horizontal = 3
script = ExtResource("1_28uus")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="Remote Settings" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Remote Settings"
horizontal_alignment = 1

[node name="Username" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/Username"]
layout_mode = 2
size_flags_horizontal = 11
text = "Username (NYI)"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/Username"]
layout_mode = 2
size_flags_horizontal = 7
placeholder_text = "asdasd"

[node name="Password" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/Password"]
layout_mode = 2
size_flags_horizontal = 11
text = "Password (NYI)"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/Password"]
layout_mode = 2
size_flags_horizontal = 7
placeholder_text = "asdasd"
secret = true

[node name="Spacer2" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="FeedTime" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/FeedTime"]
layout_mode = 2
size_flags_horizontal = 7
text = "Feed Time"

[node name="Hours" type="SpinBox" parent="VBoxContainer/FeedTime"]
layout_mode = 2
theme_override_icons/updown = SubResource("ImageTexture_o0wrb")
max_value = 23.0

[node name="Label2" type="Label" parent="VBoxContainer/FeedTime"]
layout_mode = 2
text = ":"

[node name="Minutes" type="SpinBox" parent="VBoxContainer/FeedTime"]
layout_mode = 2
theme_override_icons/updown = SubResource("ImageTexture_femu3")
max_value = 59.0

[node name="FeedLength" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/FeedLength"]
layout_mode = 2
size_flags_horizontal = 7
text = "Feed Length"

[node name="Length" type="SpinBox" parent="VBoxContainer/FeedLength"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_icons/updown = SubResource("ImageTexture_femu3")
max_value = 14.0
suffix = "seconds"

[node name="TempWarning" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/TempWarning"]
layout_mode = 2
size_flags_horizontal = 7
text = "Temperature Warning"

[node name="Min" type="SpinBox" parent="VBoxContainer/TempWarning"]
layout_mode = 2
theme_override_icons/updown = SubResource("ImageTexture_femu3")
max_value = 120.0
suffix = "˚"

[node name="Max" type="SpinBox" parent="VBoxContainer/TempWarning"]
layout_mode = 2
theme_override_icons/updown = SubResource("ImageTexture_femu3")
max_value = 120.0
suffix = "˚"

[node name="PhWarning" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/PhWarning"]
layout_mode = 2
size_flags_horizontal = 7
text = "pH Warning"

[node name="Min" type="SpinBox" parent="VBoxContainer/PhWarning"]
layout_mode = 2
theme_override_icons/updown = SubResource("ImageTexture_femu3")
max_value = 14.0

[node name="Max" type="SpinBox" parent="VBoxContainer/PhWarning"]
layout_mode = 2
theme_override_icons/updown = SubResource("ImageTexture_femu3")
max_value = 14.0

[node name="Spacer4" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="Spacer3" type="HSeparator" parent="VBoxContainer"]
visible = false
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="Local Settings" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Local Settings"
horizontal_alignment = 1

[node name="Languages" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/Languages"]
layout_mode = 2
size_flags_horizontal = 7
text = "Language"

[node name="en" type="Button" parent="VBoxContainer/Languages"]
visible = false
layout_mode = 2
size_flags_horizontal = 7
auto_translate = false
text = "English"

[node name="jp" type="Button" parent="VBoxContainer/Languages"]
visible = false
layout_mode = 2
size_flags_horizontal = 7
auto_translate = false
text = "日本語"

[node name="eo" type="Button" parent="VBoxContainer/Languages"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
auto_translate = false
text = "Esperanto"

[node name="ItemList" type="OptionButton" parent="VBoxContainer/Languages"]
layout_mode = 2
size_flags_horizontal = 3
item_count = 3
selected = 0
popup/item_0/text = "English"
popup/item_0/id = 0
popup/item_1/text = "日本語"
popup/item_1/id = 1
popup/item_2/text = "Esperanto"
popup/item_2/id = 2

[node name="Spacer" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="Buttons" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Refresh" type="Button" parent="VBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Refresh
"

[node name="Apply" type="Button" parent="VBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Apply
"

[connection signal="item_selected" from="VBoxContainer/Languages/ItemList" to="." method="_on_language_updated"]
